--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,13 +7,17 @@ on:
 jobs:
   cd:
     runs-on: ubuntu-latest
+
     env:
       AWS_REGION: ap-northeast-1
 
     steps:
-    # 1️⃣ Checkout manifests repo
+
+    # 1️⃣ Checkout manifests repo (NO CREDENTIAL OVERRIDE)
     - name: Checkout manifests repo
       uses: actions/checkout@v3
+      with:
+        persist-credentials: false   # IMPORTANT: prevents GitHub from replacing your PAT
 
     # 2️⃣ Configure AWS credentials
     - name: Configure AWS credentials
@@ -23,13 +27,15 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
 
-    # 3️⃣ Extract payload from CI
+    # 3️⃣ Extract payload (image tag + branch)
     - name: Extract Payload
       run: |
         echo "IMAGE_TAG=${{ github.event.client_payload.image_tag }}" >> $GITHUB_ENV
         echo "BRANCH_NAME=${{ github.event.client_payload.branch }}" >> $GITHUB_ENV
+        echo "Received IMAGE_TAG=$IMAGE_TAG"
+        echo "Received BRANCH_NAME=$BRANCH_NAME"
 
-    # 4️⃣ Determine environment & cluster dynamically
+    # 4️⃣ Dynamic Environment Mapping
     - name: Determine Target Environment
       run: |
         if [[ "$BRANCH_NAME" == feature/* ]]; then
@@ -49,43 +55,50 @@ jobs:
           echo "CLUSTER_NAME=eks-dev-cluster" >> $GITHUB_ENV
         fi
 
-    # 5️⃣ Update Kubernetes manifest with new image
+    # 5️⃣ Update Kubernetes Manifest
     - name: Update Kubernetes Manifest
       run: |
         FILE="${ENVIRONMENT}/deployment.yaml"
         echo "Updating $FILE with image tag $IMAGE_TAG"
         sed -i "s|image: .*|image: 541320879609.dkr.ecr.ap-northeast-1.amazonaws.com/cicd:${IMAGE_TAG}|g" $FILE
 
-    # 6️⃣ Commit & Push updated manifest (PAT required)
+    # 6️⃣ Commit & Push using PAT (NO MORE 403 ERRORS)
     - name: Commit & Push Updated Manifest
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
+
         git add .
         git diff-index --quiet HEAD || git commit -m "Deploy image ${IMAGE_TAG} to ${ENVIRONMENT} environment"
-        git push https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git main
+
+        # IMPORTANT: change remote to PAT-authenticated URL
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
+
+        # Push to main
+        git push origin main
 
     # 7️⃣ Install kubectl
     - name: Install kubectl
       uses: azure/setup-kubectl@v3
 
-    # 8️⃣ Update kubeconfig for EKS
+    # 8️⃣ Update kubeconfig (Skip if cluster not created)
     - name: Update kubeconfig for EKS
       run: |
         echo "Checking if cluster $CLUSTER_NAME exists..."
         if aws eks describe-cluster --name $CLUSTER_NAME --region $AWS_REGION >/dev/null 2>&1; then
-          echo "Cluster exists, updating kubeconfig"
+          echo "Cluster exists → updating kubeconfig."
           aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
         else
-          echo "Cluster not found, skipping deployment. You can deploy locally or wait for EKS cluster."
+          echo "❗ Cluster not found → skipping deployment. (Create EKS later)"
         fi
 
-    # 9️⃣ Apply manifest to Kubernetes (EKS or local)
+    # 9️⃣ Apply manifest ONLY if cluster is configured
     - name: Apply Manifest to Kubernetes
       run: |
         if kubectl config current-context >/dev/null 2>&1; then
-          echo "Deploying to cluster..."
+          echo "Deploying to Kubernetes..."
           kubectl apply -f ${ENVIRONMENT}/deployment.yaml
         else
-          echo "No cluster context, skipping deployment. Use KinD or create EKS cluster later."
+          echo "❗ No kubeconfig context → Skipping deployment."
+          echo "You can run locally using KinD or create EKS later."
         fi
