update workflow filessikss

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,126 +1,110 @@
 name: CD Pipeline
 
 on:
-  # Triggered from CI after image is built & pushed
   repository_dispatch:
     types: [deploy]
 
-  # Production release via version tag
   push:
     tags:
       - 'v*.*.*'
 
+env:
+  AWS_REGION: ap-northeast-1
+  ECR_REPO: 541320879609.dkr.ecr.ap-northeast-1.amazonaws.com/cicd
+
+################################
+# DEV
+################################
 jobs:
-  cd:
+  deploy-dev:
+    if: startsWith(github.event.client_payload.branch, 'feature/')
     runs-on: ubuntu-latest
-
-    # 🔐 GitHub Environment (enables approvals)
-    environment: ${{ 
-      startsWith(github.ref_name, 'v') && 'prod' ||
-      startsWith(github.event.client_payload.branch, 'release/') && 'uat' ||
-      github.event.client_payload.branch == 'main' && 'stage' ||
-      startsWith(github.event.client_payload.branch, 'feature/') && 'dev' ||
-      'dev'
-    }}
-
-    env:
-      AWS_REGION: ap-northeast-1
-      ECR_REPO: 541320879609.dkr.ecr.ap-northeast-1.amazonaws.com/cicd
+    environment: dev
 
     steps:
-    # 1️⃣ Checkout manifests repo (GitOps)
-    - name: Checkout manifests repo
-      uses: actions/checkout@v3
-      with:
-        persist-credentials: false
+    - uses: actions/checkout@v3
 
-    # 2️⃣ Configure AWS credentials
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v4
+    - uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-region: ${{ env.AWS_REGION }}
 
-    # 3️⃣ Extract payload from CI
-    - name: Extract Payload
+    - name: Deploy to DEV
       run: |
-        IMAGE_TAG="${{ github.event.client_payload.image_tag }}"
-        IMAGE_DIGEST="${{ github.event.client_payload.image_digest }}"
-        BRANCH_NAME="${{ github.event.client_payload.branch }}"
-
-        if [[ -z "$IMAGE_DIGEST" ]]; then
-          echo "❌ Missing image digest"
-          exit 1
-        fi
-
-        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-        echo "IMAGE_DIGEST=$IMAGE_DIGEST" >> $GITHUB_ENV
-        echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
-
-    # 4️⃣ Copy GitHub Environment into runtime variable
-    - name: Set ENVIRONMENT variable
-      run: |
-        echo "ENVIRONMENT=${{ job.environment }}" >> $GITHUB_ENV
-        echo "Deploying to environment: ${{ job.environment }}"
-
-    # 5️⃣ Set EKS cluster per environment
-    - name: Set Cluster Name
-      run: |
-        case "$ENVIRONMENT" in
-          dev)
-            echo "CLUSTER_NAME=eks-dev-cluster" >> $GITHUB_ENV
-            ;;
-          stage)
-            echo "CLUSTER_NAME=eks-stage-cluster" >> $GITHUB_ENV
-            ;;
-          uat)
-            echo "CLUSTER_NAME=eks-uat-cluster" >> $GITHUB_ENV
-            ;;
-          prod)
-            echo "CLUSTER_NAME=eks-prod-cluster" >> $GITHUB_ENV
-            ;;
-        esac
-
-    # 6️⃣ Update Kubernetes manifest using IMMUTABLE DIGEST
-    - name: Update Kubernetes Manifest
-      run: |
-        FILE="${ENVIRONMENT}/deployment.yaml"
-        echo "Updating $FILE"
-        sed -i "s|image: .*|image: $ECR_REPO@${IMAGE_DIGEST}|g" $FILE
-
-    # 7️⃣ Commit & push manifest (GitOps)
-    - name: Commit & Push Manifest
-      if: env.ENVIRONMENT != 'prod'
-      run: |
+        sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" dev/deployment.yaml
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
-
         git add .
-        git diff-index --quiet HEAD || \
-        git commit -m "Deploy ${IMAGE_TAG} to ${ENVIRONMENT}"
+        git commit -m "Deploy to dev"
+        git push
 
-        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
-        git push origin main
+################################
+# STAGE
+################################
+  deploy-stage:
+    if: github.event.client_payload.branch == 'main'
+    runs-on: ubuntu-latest
+    environment: stage
 
-    # 8️⃣ Install kubectl
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v3
+    steps:
+    - uses: actions/checkout@v3
+    - uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
-    # 9️⃣ Update kubeconfig (safe skip)
-    - name: Update kubeconfig
+    - name: Deploy to STAGE
       run: |
-        if aws eks describe-cluster --name $CLUSTER_NAME --region $AWS_REGION >/dev/null 2>&1; then
-          aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
-        else
-          echo "⚠️ Cluster not found — skipping deploy"
-        fi
+        sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" stage/deployment.yaml
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add .
+        git commit -m "Deploy to stage"
+        git push
 
-    # 🔟 Apply manifest
-    - name: Deploy to Kubernetes
+################################
+# UAT (MANUAL APPROVAL)
+################################
+  deploy-uat:
+    if: startsWith(github.event.client_payload.branch, 'release/')
+    runs-on: ubuntu-latest
+    environment: uat
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Deploy to UAT
       run: |
-        if kubectl config current-context >/dev/null 2>&1; then
-          kubectl apply -f ${ENVIRONMENT}/deployment.yaml
-        else
-          echo "⚠️ No kubeconfig — skipping kubectl apply"
-        fi
+        sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" uat/deployment.yaml
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add .
+        git commit -m "Deploy to UAT"
+        git push
+
+################################
+# PROD (TAG + MANUAL APPROVAL)
+################################
+  deploy-prod:
+    if: startsWith(github.ref_name, 'v')
+    runs-on: ubuntu-latest
+    environment: prod
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
+    - name: Deploy to PROD
+      run: |
+        sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" prod/deployment.yaml
