--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,7 +6,7 @@ on:
 
   push:
     tags:
-      - 'v*.*.*'
+      - 'v*.*.*'   # Production release tag
 
 env:
   AWS_REGION: ap-northeast-1
@@ -22,9 +22,13 @@ jobs:
     environment: dev
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout manifests repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false
 
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -32,12 +36,20 @@ jobs:
 
     - name: Deploy to DEV
       run: |
+        if [[ -z "${{ github.event.client_payload.image_digest }}" ]]; then
+          echo "❌ Missing image digest"
+          exit 1
+        fi
+
         sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" dev/deployment.yaml
+
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add .
-        git commit -m "Deploy to dev"
-        git push
+        git diff-index --quiet HEAD || git commit -m "Deploy to dev"
+
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
+        git push origin main
 
 ################################
 # STAGE
@@ -48,8 +60,13 @@ jobs:
     environment: stage
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Checkout manifests repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -57,12 +74,20 @@ jobs:
 
     - name: Deploy to STAGE
       run: |
+        if [[ -z "${{ github.event.client_payload.image_digest }}" ]]; then
+          echo "❌ Missing image digest"
+          exit 1
+        fi
+
         sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" stage/deployment.yaml
+
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add .
-        git commit -m "Deploy to stage"
-        git push
+        git diff-index --quiet HEAD || git commit -m "Deploy to stage"
+
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
+        git push origin main
 
 ################################
 # UAT (MANUAL APPROVAL)
@@ -70,11 +95,16 @@ jobs:
   deploy-uat:
     if: startsWith(github.event.client_payload.branch, 'release/')
     runs-on: ubuntu-latest
-    environment: uat
+    environment: uat   # ⏸ requires approval
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Checkout manifests repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -82,12 +112,20 @@ jobs:
 
     - name: Deploy to UAT
       run: |
+        if [[ -z "${{ github.event.client_payload.image_digest }}" ]]; then
+          echo "❌ Missing image digest"
+          exit 1
+        fi
+
         sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" uat/deployment.yaml
+
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
         git add .
-        git commit -m "Deploy to UAT"
-        git push
+        git diff-index --quiet HEAD || git commit -m "Deploy to UAT"
+
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
+        git push origin main
 
 ################################
 # PROD (TAG + MANUAL APPROVAL)
@@ -95,11 +133,16 @@ jobs:
   deploy-prod:
     if: startsWith(github.ref_name, 'v')
     runs-on: ubuntu-latest
-    environment: prod
+    environment: prod   # ⏸ requires approval
 
     steps:
-    - uses: actions/checkout@v3
-    - uses: aws-actions/configure-aws-credentials@v4
+    - name: Checkout manifests repo
+      uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -107,4 +150,17 @@ jobs:
 
     - name: Deploy to PROD
       run: |
+        if [[ -z "${{ github.event.client_payload.image_digest }}" ]]; then
+          echo "❌ Missing image digest for prod"
+          exit 1
+        fi
+
         sed -i "s|image: .*|image: $ECR_REPO@${{ github.event.client_payload.image_digest }}|g" prod/deployment.yaml
+
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
+        git add .
+        git diff-index --quiet HEAD || git commit -m "Deploy to PROD"
+
+        git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/abhi10011990/manifests-repo.git
+        git push origin main
